[project]
name = "artisan-tools"
version = "0.18.0"
dependencies = [
  "semver",
  "typer",
  "rich", # pretty output for typer
  "pyyaml",
  "structlog",
]
requires-python = ">=3.7"
authors = [
  {name = "Gregers Poulsen", email = "gp@skytem.com"},
]
description = "Tools to make software artisanship a breeze"
readme = "README.rst"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]


[project.scripts]
at = "artisan_tools.cli:run"
