[workspace]
members = ["crates/test_utils"]


[workspace.package]
authors = ["Gregers Poulsen <gp@skytem.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gregerspoulsen/artisan_tools"
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.81"

[workspace.dependencies]
semver = "^1.0"

[package]
name = "artisan_tools"
description = "Tools to help the software artisan make their craft a breeze."
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "at"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
gix = "^0.72"
semver.workspace = true

test_utils = { path = "crates/test_utils" }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
testresult = "0.4.1"
pretty_assertions = "1.4.1"
tempfile = "3.10"

[profile.release]
opt-level = "z"   # We got the speed we need, so we optimize for size
debug = false
panic = "abort"
strip = true
lto = true
codegen-units = 1
