[package]
name = "test_utils"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
semver.workspace = true
bon.workspace = true
gix.workspace = true
tempfile.workspace = true
testresult.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
